# shenyu-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  RELEASE-NOTES.md
.github/workflows/: ci.bat  ci.sh  publish.yml  rust.yml  shenyu.bat  shenyu.sh
examples/: Cargo.toml
examples/actix-web-example/: Cargo.toml  config.yml
examples/actix-web-example/src/: main.rs
examples/axum-example/: Cargo.toml  config.yml
examples/axum-example/src/: main.rs
examples/src/: actix_web_example.rs  axum_example.rs  ci.rs
shenyu-client-rust/: Cargo.toml  config.yml
shenyu-client-rust/src/: ci.rs  config.rs  core.rs  error.rs  lib.rs  model.rs
