# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "examples"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

categories = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = ["shenyu"]

[[bin]]
name = "axum_example"
path = "src/axum_example.rs"
required-features = ["axum"]

[[bin]]
name = "actix_web_example"
path = "src/actix_web_example.rs"
required-features = ["actix-web"]

[features]
default = []
axum = ["dep:axum"]
actix-web = ["dep:actix-web"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
shenyu-client-rust = { path = "../shenyu-client-rust", version = "0.1.1", features = ["actix-web", "axum"] }

# http micro services need.
axum = { version = "0.7.5", optional = true }
actix-web = { version = "4.9.0", optional = true }
tokio = "1.39.3"