# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.


[package]
name = "shenyu-client-rust"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

categories = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = ["shenyu"]
readme = "../README.md"

[features]
default = []
axum = ["dep:axum"]
actix-web = ["dep:actix-web"]

[dependencies]
cfg-if = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ureq = { workspace = true, features = ["json"] }
tower-service = "0.3.3"
serde_yaml = "0.9.34"
dashmap = "6.0.1"

# http micro services need.
axum = { version = "0.7.5", optional = true }
actix-web = { version = "4.9.0", optional = true }

# grpc micro services need.
tonic = { version = "0.12.1" }
prost = { version = "0.13.1" }
tokio = { version = "1.38.0", features = ["full"] }
local-ip-address = "0.4.9"

# tonic-reflectionIt is mainly used for grpcurl tools to view grpc microservice interface protocol definitions
# note: Must be the same as the tonic version
tonic-reflection = { version = "0.12.1" }
quote = "1.0.36"
tracing = "0.1.40"

[dev-dependencies]
mockall = "0.10.2"
