[package]
name = "actix-web-example"
version.workspace = true
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
shenyu-client-rust = { workspace = true, features = ["actix-web"] }
actix-web = "4.9.0"
tokio = "1.39.3"
tracing-subscriber = "0.3"
