[package]
name = "axum-example"
version.workspace = true
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
shenyu-client-rust = { workspace = true, features = ["axum"] }
axum = "0.7.5"
tokio = "1.39.3"
tracing-subscriber = "0.3"
